--- a/libs/base/src/shared/components/features/bottom-controls/bottom-controls.component.html
+++ b/libs/base/src/shared/components/features/bottom-controls/bottom-controls.component.html
@@ -5,7 +5,7 @@
   [class.cursor-not-allowed]="insufficientPermission()"
   (onClick)="onSubmitClick($event)"
   [disabled]="disabled || insufficientPermission()"
-  [matTooltip]="insufficientPermission() ? 'شما دسترسی برای انجام این فعالیت را ندارید.' : ''"
+  [matTooltip]="insufficientPermission() ? fallbackInsufficientPermissionText : ''"
   >{{ submitText }}</ui-button
   >
   @if (!hideCancel && !!cancelText) {
