wip add translations

--- a/libs/base/src/shared/components/features/dialog/components/change-password-dialog/change-password-dialog.component.html
+++ b/libs/base/src/shared/components/features/dialog/components/change-password-dialog/change-password-dialog.component.html
@@ -1,8 +1,12 @@
 <feature-dialog-layout
+  i18n-title="تغییر رمز عبور@@base.feature.dialog.changePasswordTitle"
   title="تغییر رمز عبور"
+  i18n-subtitle="رمز عبور خود را تغییر دهید .@@base.feature.dialog.changePasswordSubTitle"
   subtitle="رمز عبور خود را تغییر دهید ."
   submitBtn="تغییر رمز عبور"
+  i18n-submitBtn="تغییر رمز عبور@@base.feature.dialog.changePasswordSubmitButton"
   cancelBtn="لغو"
+  i18n-cancelBtn="لغو@@base.feature.dialog.changePasswordCancelButton"
   [hideControls]="false"
   [form]="formBuilder.formGroup"
   (onSubmit)="onSubmit($event)"
