wip add translations

--- a/libs/base/src/shared/components/layouts/dialog-layout/dialog-layout.component.html
+++ b/libs/base/src/shared/components/layouts/dialog-layout/dialog-layout.component.html
@@ -20,8 +20,8 @@
     <feature-bottom-controls
       [form]="form"
       [actionType]="actionType()"
-      [submitText]="submitBtn ?? fallbackSubmitText"
-      [cancelText]="cancelBtn ?? fallbackCancelText"
+      [submitText]="submitBtn ?? SUBMIT_DEFAULT_TEXT"
+      [cancelText]="cancelBtn ?? CANCEL_DEFAULT_TEXT"
       [submitClass]="submitClass"
       [cancelClass]="cancelClass"
       (onSubmit)="onSubmit.emit($event)"
