wip add translations

--- a/libs/base/src/shared/components/features/table/table-filter-menu/table-filter-menu.component.html
+++ b/libs/base/src/shared/components/features/table/table-filter-menu/table-filter-menu.component.html
@@ -15,7 +15,9 @@
       <feature-bottom-controls
         class="mt-4"
         submitText="فیلتر"
+        i18n-submitText="فیلتر@@base.feature.table.filterMenu.submitButton"
         cancelText="لغو"
+        i18n-cancelText="لغو@@base.feature.table.filterMenu.cancelButton"
         [form]="form()!.formGroup"
         (onSubmit)="submit()"
         (onCancel)="cancel()"
