--- a/libs/base/src/shared/components/ui/pagination/pagination.component.html
+++ b/libs/base/src/shared/components/ui/pagination/pagination.component.html
@@ -86,10 +86,10 @@
       [searchable]="false"
       >
     </ui-field>
-    <span class="text-outline">تعداد نمایش در هر صفحه</span>
+    <span class="text-outline" i18n="@@base.ui.pagination.perPageCount">تعداد نمایش در هر صفحه</span>
   </div>
 </ng-template>
 
 <ng-template #TotalCountText>
-  <p class="text-xs font-medium whitespace-nowrap">تعداد کل: {{ _total() }}</p>
+  <p class="text-xs font-medium whitespace-nowrap" i18n="@@base.ui.pagination.totalCount">تعداد کل: {{ _total() }}</p>
 </ng-template>
