--- a/libs/base/src/shared/components/ui/radio/radio.component.html
+++ b/libs/base/src/shared/components/ui/radio/radio.component.html
@@ -24,7 +24,7 @@
     </mat-radio-group>
   } @else {
     <mat-radio-group color="primary">
-      <mat-radio-button class="pointer-events-none"> Loading... </mat-radio-button>
+      <mat-radio-button class="pointer-events-none" i18n="@@base.ui.radio.loading"> Loading... </mat-radio-button>
     </mat-radio-group>
   }
   @if (currentItems() && currentItems()!.length === 0) {
@@ -39,13 +39,14 @@
   }
 </div>
 @if (control.invalid && control.touched) {
-  <p class="text-error-500 text-xs mt-3 {{ label ? 'mr-[6.25rem]' : '' }}">
+  <p class="text-error-500 text-xs mt-3 {{ label ? 'mr-[6.25rem]' : '' }}"
+  i18n="@@base.ui.radio.error">
     این فیلد الزامی می باشد.
   </p>
 }
 
 <ng-template #Loading>
   <mat-radio-group color="primary">
-    <mat-radio-button class="pointer-events-none"> Loading... </mat-radio-button>
+    <mat-radio-button class="pointer-events-none" i18n="@@base.ui.radio.loading"> Loading... </mat-radio-button>
   </mat-radio-group>
 </ng-template>
