--- a/libs/base/src/shared/components/ui/select-options/select-options.component.html
+++ b/libs/base/src/shared/components/ui/select-options/select-options.component.html
@@ -16,7 +16,7 @@
             [formControl]="filterControl"
             (keydown)="onFilterKeyDown($event)"
             class="unicode-normal"
-            [placeholder]="optional ? 'مقداری را اضافه یا جستجو کنید...' : 'جستجو در موارد ...'"
+            [placeholder]="optional ? SEARCH_OR_ADD_TEXT : SEARCH_TEXT"
             />
         </div>
       }
@@ -38,7 +38,7 @@
 
       @if (multiple) {
         <p class="pt-2 pb-2 px-5 text-xs text-primary">
-          {{ _selectionModel.selectedCount() }} مورد انتخاب شده
+          {{ _selectionModel.selectedCount() }} {{N_ITEMS_SELECTED_TEXT}}
         </p>
       }
 
@@ -47,7 +47,7 @@
       }
 
       @if (_showingOptionalValue()) {
-        <span class="ps-3 pb-2 text-xs">انتخاب مقدار اختیاری:</span>
+        <span class="ps-3 pb-2 text-xs">CHOOSE_OPTIONAL_VALUE_TEXT</span>
       }
 
       <div #Container class="flex flex-col overflow-auto min-h-[7rem] max-h-[18rem]">
@@ -63,7 +63,7 @@
                 (keydown.enter)="close()"
                 mat-menu-item
                 >
-                در حال بارگذاری...
+                {{LOADING_TEXT}}.
               </div>
             </div>
           } @else {
@@ -76,7 +76,7 @@
                   (keydown.enter)="close()"
                   mat-menu-item
                   >
-                  آیتمی موجود نیست.
+                  {{NO_ITEMS_AVAILABLE_TEXT}}
                 </div>
               </div>
             } @else {
