--- a/libs/base/src/shared/components/ui/checkbox-group/checkbox-group.component.html
+++ b/libs/base/src/shared/components/ui/checkbox-group/checkbox-group.component.html
@@ -5,7 +5,7 @@
   }
 </p>
 <div class="h-full flex flex-col">
-  @for (item of items() ?? []; track item) {
+  @for (item of items() ?? []; track item.value) {
     <mat-checkbox
       class="checkbox"
       [checked]="checkedItems[item.value]"
