--- a/libs/base/src/shared/components/ui/loader-screen/loader-screen.component.html
+++ b/libs/base/src/shared/components/ui/loader-screen/loader-screen.component.html
@@ -9,8 +9,8 @@
       ></mat-spinner>
     }
     <div class="retry-panel" [class.show]="errored">
-      <p>در بارگزاری مشکلی به وجود آمد، لطفا دوباره تلاش کنید.</p>
-      <ui-button class="mt-6 w-1/2" (onClick)="onRetry()">تلاش مجدد</ui-button>
+      <p>An error occured, Please try again.</p>
+      <ui-button class="mt-6 w-1/2" (onClick)="onRetry()">Retry</ui-button>
     </div>
   </div>
 }
