--- a/libs/base/src/shared/components/ui/pagination/pagination.component.html
+++ b/libs/base/src/shared/components/ui/pagination/pagination.component.html
@@ -38,7 +38,7 @@
         [disabled]="page() === 1"
         >
         <mat-icon svgIcon="chevron-left"></mat-icon>
-        <span>قبلی</span>
+        <span>Previous</span>
       </ui-button>
       <div class="flex gap-2">
         @for (item of pagesArray(); track item.number; let index = $index) {
@@ -53,7 +53,7 @@
             (click)="onSelect(item)"
             (keydown)="onSelect(item)"
             >
-            <p class="pointer-events-none">{{ item.number | number: '2.0-0' }}</p>
+            <p>{{ item.number | number: '2.0-0' }}</p>
           </div>
           @if (item.number === 1 && showLeftEllipsis()) {
             <p class="ellipsis-gap">...</p>
@@ -68,7 +68,7 @@
         padding="0.25rem"
         [disabled]="page() === totalPages()"
         >
-        <span>بعدی</span>
+        <span>Next</span>
         <mat-icon svgIcon="chevron-right"></mat-icon>
       </ui-button>
     </div>
@@ -77,6 +77,7 @@
 
 <ng-template #SizeSelect>
   <div class="flex items-baseline gap-4">
+    <span class="text-outline">Show</span>
     <ui-field
       controlType="select"
       class="w-32 flex"
@@ -86,10 +87,10 @@
       [searchable]="false"
       >
     </ui-field>
-    <span class="text-outline">تعداد نمایش در هر صفحه</span>
+    <span class="text-outline">Per Page</span>
   </div>
 </ng-template>
 
 <ng-template #TotalCountText>
-  <p class="text-xs font-medium whitespace-nowrap">تعداد کل: {{ _total() }}</p>
+  <p class="text-xs font-medium whitespace-nowrap">Total: {{ _total() }}</p>
 </ng-template>
