--- a/libs/base/src/shared/components/ui/select-options/select-options.component.scss
+++ b/libs/base/src/shared/components/ui/select-options/select-options.component.scss
@@ -7,6 +7,7 @@
 .option-item {
   padding: 0.375rem 0.75rem;
   height: auto;
+  border-radius: 0 !important;
   &.option-selected {
     @apply bg-surface-container-highest text-primary;
   }
