--- a/libs/base/src/shared/components/ui/switch/switch.component.html
+++ b/libs/base/src/shared/components/ui/switch/switch.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center">
+<div class="flex flex-row-reverse justify-end items-center">
   @if (label) {
     <p class="flex items-center h-14 pe-2">{{ label }}</p>
   }
