--- a/libs/base/src/shared/components/features/dialog/components/input-dialog/input-dialog.component.html
+++ b/libs/base/src/shared/components/features/dialog/components/input-dialog/input-dialog.component.html
@@ -21,6 +21,7 @@
         appearance="stroked"
         action="delete"
         (onClick)="onDelete()"
+        i18n="@@base.feature.dialog.input.deleteButton"
         >حذف</ui-button
         >
       }
