--- a/libs/base/src/shared/components/ui/field/field.component.html
+++ b/libs/base/src/shared/components/ui/field/field.component.html
@@ -145,8 +145,8 @@
   }
   <mat-datepicker #DatePicker (closed)="onDatePickerClose()" [restoreFocus]="false">
     <mat-datepicker-actions>
-      <button class="text-error" mat-button matDatepickerCancel>انصراف</button>
-      <button class="text-primary" mat-button matDatepickerApply>ذخیره</button>
+      <button class="text-error" mat-button matDatepickerCancel i18n="@@base.ui.field.cancel">انصراف</button>
+      <button class="text-primary" mat-button matDatepickerApply i18n="@@base.ui.field.apply">ذخیره</button>
     </mat-datepicker-actions>
   </mat-datepicker>
   <!-- Suffix Elements -->
