--- a/libs/base/src/shared/components/features/table/columns/table-col-action/table-col-action.component.html
+++ b/libs/base/src/shared/components/features/table/columns/table-col-action/table-col-action.component.html
@@ -13,6 +13,8 @@
             @case ('icon') {
               <ui-button
                 uiPermissionHide
+                [uiPermissionHideAction]="action.actionType"
+                [uiPermissionHideKey]="data.permission"
                 [icon]="action.content"
                 [disabled]="$any(data.disabled$ ? (data.disabled$ | async) : data.disabled)"
                 [matBadge]="action.badge ? action.badge(row.originalItem) : ''"
@@ -35,6 +37,8 @@
             @case ('button') {
               <ui-button
                 uiPermissionHide
+                [uiPermissionHideAction]="action.actionType"
+                [uiPermissionHideKey]="data.permission"
                 [class]="action.class"
                 [appearance]="action.appearance ?? 'filled'"
                 [theme]="action.theme ?? 'primary'"
