--- a/libs/base/src/shared/components/features/table/table-header/table-header.component.html
+++ b/libs/base/src/shared/components/features/table/table-header/table-header.component.html
@@ -29,6 +29,7 @@
 @if (options.export) {
   <ui-button
   uiPermissionHide
+  [uiPermissionHideAction]="'export'"
   class="h-12"
   appearance="text"
   (onClick)="onExport.emit($event)"
@@ -39,9 +40,10 @@
 </ui-button>
 }
 
-@if(options.export) {
+@if(options.print) {
   <ui-button
   uiPermissionHide
+  [uiPermissionHideAction]="'print'"
   class="h-12"
   appearance="text"
   (onClick)="onPrint.emit($event)"
@@ -54,6 +56,7 @@
 @if(options.events?.add) {
   <ui-button
   uiPermissionHide
+  [uiPermissionHideAction]="'create'"
   #MenuTriggerAddButton="matMenuTrigger"
   [matMenuTriggerFor]="null"
   class="h-12"
