i18n | Translate Default phrases to english

--- a/libs/base/src/shared/components/features/dialog/components/input-dialog/input-dialog.component.html
+++ b/libs/base/src/shared/components/features/dialog/components/input-dialog/input-dialog.component.html
@@ -22,7 +22,7 @@
         action="delete"
         (onClick)="onDelete()"
         i18n="@@base.feature.dialog.input.deleteButton"
-        >حذف</ui-button
+        >Delete</ui-button
         >
       }
     </ng-container>
