--- a/libs/base/src/shared/components/ui/license-plate/license-plate.component.html
+++ b/libs/base/src/shared/components/ui/license-plate/license-plate.component.html
@@ -13,7 +13,7 @@
       (keydown.enter)="input.focus()"
       >
       @if (label !== '') {
-        <mat-label>{{ label ?? 'پلاک' }}</mat-label>
+        <mat-label>{{ label ?? 'License Plate' }}</mat-label>
       }
       <input
         matInput
@@ -65,7 +65,7 @@
         <span class="letter-section">{{ letterSection }}</span>
         <span class="second-section">{{ secondSection }}</span>
         <span class="state-section relative">
-          <span class="state-label">ایران</span>
+          <span class="state-label">Iran</span>
           {{ stateSection }}
         </span>
       </div>
