--- a/libs/base/src/shared/components/ui/radio/radio.component.html
+++ b/libs/base/src/shared/components/ui/radio/radio.component.html
@@ -41,7 +41,7 @@
 @if (control.invalid && control.touched) {
   <p class="text-error-500 text-xs mt-3 {{ label ? 'mr-[6.25rem]' : '' }}"
   i18n="@@base.ui.radio.error">
-    این فیلد الزامی می باشد.
+    This Field Is Required.
   </p>
 }
 
