--- a/libs/base/src/shared/components/features/dialog/components/change-password-dialog/change-password-dialog.component.html
+++ b/libs/base/src/shared/components/features/dialog/components/change-password-dialog/change-password-dialog.component.html
@@ -1,12 +1,12 @@
 <feature-dialog-layout
-  i18n-title="تغییر رمز عبور@@base.feature.dialog.changePasswordTitle"
-  title="تغییر رمز عبور"
-  i18n-subtitle="رمز عبور خود را تغییر دهید .@@base.feature.dialog.changePasswordSubTitle"
-  subtitle="رمز عبور خود را تغییر دهید ."
-  submitBtn="تغییر رمز عبور"
-  i18n-submitBtn="تغییر رمز عبور@@base.feature.dialog.changePasswordSubmitButton"
-  cancelBtn="لغو"
-  i18n-cancelBtn="لغو@@base.feature.dialog.changePasswordCancelButton"
+  i18n-title="Change Password@@base.feature.dialog.changePasswordTitle"
+  title="Change Password"
+  i18n-subtitle="Change Your Password .@@base.feature.dialog.changePasswordSubTitle"
+  subtitle="Change Your Password."
+  submitBtn="Change Password"
+  i18n-submitBtn="Change Password@@base.feature.dialog.changePasswordSubmitButton"
+  cancelBtn="Cancel"
+  i18n-cancelBtn="Cancel@@base.feature.dialog.changePasswordCancelButton"
   [hideControls]="false"
   [form]="formBuilder.formGroup"
   (onSubmit)="onSubmit($event)"
