--- a/libs/base/src/shared/components/features/table/table-filter-bar/table-filter-bar.component.html
+++ b/libs/base/src/shared/components/features/table/table-filter-bar/table-filter-bar.component.html
@@ -5,7 +5,8 @@
     icon="trash"
     [disabled]="!filterModel?.hasFilter()"
     (onClick)="clearFilters()"
-    >حذف فیلترها</ui-button
+    i18n="@@base.feature.table.filters.removeFilters"
+    >Remove Filters</ui-button
     >
     <div class="flex-auto flex flex-row-reverse items-center gap-2.5 overflow-auto">
       @for (item of filterModel?.filtersArray() ?? []; track item) {
