--- a/libs/base/src/shared/components/features/bottom-controls/bottom-controls.component.html
+++ b/libs/base/src/shared/components/features/bottom-controls/bottom-controls.component.html
@@ -5,7 +5,7 @@
   (onClick)="onSubmitClick($event)"
   [disabled]="disabled || insufficientPermission()"
   [matTooltip]="insufficientPermission() ? INSUFFICIENT_PERMISSION_TEXT : ''"
-  >{{ submitText }}</cac-button
+  >{{ submitText }}</cac-button>
 
 @if (!hideCancel && !!cancelText) {
   <cac-button
