--- a/libs/base/src/shared/components/features/image-uploader/image-uploader.component.scss
+++ b/libs/base/src/shared/components/features/image-uploader/image-uploader.component.scss
@@ -12,7 +12,7 @@
 
   &.has-error {
     .ngx-file-drop__drop-zone {
-      @apply border-error #{!important};
+      @apply border-error!;
     }
     .upload-text {
       @apply text-error;
@@ -59,6 +59,6 @@
   @apply cursor-default;
 
   .ngx-file-drop__drop-zone {
-    @apply border-0 #{!important};
+    @apply border-0!;
   }
 }
