--- a/libs/base/src/shared/components/ui/button/button.component.scss
+++ b/libs/base/src/shared/components/ui/button/button.component.scss
@@ -75,7 +75,7 @@
     //  filter: saturate(0%) !important;
     //}
     &.disabled {
-      @apply bg-transparent text-surface-on border-opacity-60 #{!important};
+      @apply bg-transparent! text-surface-on! border-opacity-60!;
     }
   }
   &.filled {
@@ -89,7 +89,7 @@
       }
     }
     &.disabled {
-      @apply border-outline-variant bg-neutral-500 bg-opacity-[12%] text-surface-on text-opacity-[38%] #{!important};
+      @apply border-outline-variant! bg-neutral-500! bg-opacity-[12%]! text-surface-on! text-opacity-[38%]!;
     }
   }
   &.text {
@@ -100,7 +100,7 @@
       filter: brightness(95%);
     }
     &.disabled {
-      @apply text-surface-on text-opacity-60 #{!important};
+      @apply text-surface-on! text-opacity-60!;
     }
   }
   &.elevated {
@@ -134,13 +134,13 @@
   letter-spacing: 0 !important;
 
   &.content-align-start {
-    @apply justify-start #{!important};
+    @apply justify-start!;
   }
   &.content-align-center {
-    @apply justify-center #{!important};
+    @apply justify-center!;
   }
   &.content-align-end {
-    @apply justify-end #{!important};
+    @apply justify-end!;
   }
 
   .ui-button-content {
