--- a/libs/base/src/shared/components/ui/skeleton/skeleton.component.scss
+++ b/libs/base/src/shared/components/ui/skeleton/skeleton.component.scss
@@ -12,7 +12,7 @@
   background: inherit !important;
   border-radius: inherit !important;
   .skeleton-loader {
-    @apply transform-gpu #{!important};
+    @apply transform-gpu!;
     height: 100% !important;
     border-radius: inherit !important;
     background: inherit !important;
@@ -22,7 +22,7 @@
 
   @at-root {
     & {
-      @apply rtl:rotate-180 #{!important};
+      @apply rtl:rotate-180!;
     }
   }
 }
