--- a/libs/base/src/shared/components/features/table/table-filter-bar/table-filter-bar.component.html
+++ b/libs/base/src/shared/components/features/table/table-filter-bar/table-filter-bar.component.html
@@ -1,4 +1,8 @@
-<div class="h-12 w-full bg-white flex flex-row-reverse items-center gap-2.5 px-1.5">
+<div
+  class="transition-all w-full bg-white flex flex-row-reverse items-center overflow-hidden gap-2.5 px-1.5 {{
+    filterModel?.hasFilter() ? 'h-12' : 'h-0'
+  }}"
+>
   <cac-button
     appearance="text"
     class="text-primary-600 flex-none {{ !filterModel?.hasFilter() ? 'saturate-0' : '' }}"
@@ -6,18 +10,18 @@
     [disabled]="!filterModel?.hasFilter()"
     (onClick)="clearFilters()"
     i18n="@@base.feature.table.filters.removeFilters"
-    >Remove Filters</cac-button
-    >
-    <div class="flex-auto flex flex-row-reverse items-center gap-2.5 overflow-auto">
-      @for (item of filterModel?.filtersArray() ?? []; track item.prop) {
-        <cac-chips [closable]="true" (onClose)="removeFilter(item)">
-          @if (item?.icon?.length) {
-            <cac-icon [icon]="item?.icon"></cac-icon>
-          }
-          <span>{{ item.formatted?.prefix }}</span>
-          <span>{{ item.formatted?.text }}</span>
-          <span>{{ item.formatted?.suffix }}</span>
-        </cac-chips>
-      }
-    </div>
+    >Clear Filters</cac-button
+  >
+  <div class="flex-auto flex flex-row-reverse items-center gap-2.5 overflow-auto">
+    @for (item of filterModel?.filtersArray() ?? []; track item.prop) {
+      <cac-chips [closable]="true" (onClose)="removeFilter(item)">
+        @if (item?.icon?.length) {
+          <cac-icon [icon]="item?.icon"></cac-icon>
+        }
+        <span>{{ item.formatted?.prefix }}</span>
+        <span>{{ item.formatted?.text }}</span>
+        <span>{{ item.formatted?.suffix }}</span>
+      </cac-chips>
+    }
   </div>
+</div>
